# copier-nuxt-python-intranet-app

./: .claudeignore  .coderabbit.yaml  .copier-answers.yml  .copier-managed-files.json  .coveragerc  .gitignore  .pre-commit-config.yaml  .python-version  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  _typos.toml  biome.jsonc  copier-nuxt-python-intranet-app.code-workspace  copier.yml  mutex_queue  pylintrc.toml  pyproject.toml  pyrefly.toml  pyrightconfig.json  pytest.ini  ruff-non-src.toml  ruff-test.toml  ruff.toml  sh.bat  ty.toml
.claude/: CLAUDE.md
.claude/.beads/: .gitignore  config.yaml  metadata.json
.claude/commands/: add-command.md  commit.md  create-adr.md  create-issues.md  gap.md  green.md  polish.md  red.md  refactor.md  research.md  simplify.md  spike.md  summarize.md  tdd-review.md
.claude/helpers/: merge-claude-settings.sh
.claude/hooks/: bash-chain-guard.js  (+3 more)
.config/: .copier-answers.yml  .copier-managed-files.json  .coveragerc  _typos.toml  pylintrc.toml  pyrefly.toml  ruff.toml
.devcontainer/: Dockerfile  create-aws-profile.sh  devcontainer-lock.json  devcontainer.json  docker-compose.yml  initialize-command.sh  install-ci-tooling.py  install-ci-tooling.sh  manual-setup-deps.py  merge-claude-settings.sh  on-create-command-boilerplate.sh  on-create-command.sh  post-start-command.sh  windows-host-helper.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml  pull_request_template.md  zizmor.yml
copier_template_resources/: eslint.config.mjs  eslint.shared.mjs  extract_project_version.py  openapi_schema_simplifier.py  vcrpy_fixtures.py  vitest-run.mjs  vitest-run.sh
extensions/: context.py
resources/: vcrpy_fixtures.py
scripts/: delete_false_positive_rej.py
template/: .coderabbit.yaml  .copier-managed-files.json  .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .prettierrc  .python-version.jinja  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md.jinja  _typos.toml  biome.jsonc  docker-compose.yaml.jinja  pnpm-workspace.yaml  pyrefly.mutmut.toml  pyrefly.toml  pyrightconfig.json  pytest.ini  ruff-non-src.toml  ruff-test.toml  ruff.toml  sh.bat  ty.toml  {% if not deploy_as_executable %}docker-compose.yaml{% endif %}.jinja  {{ repo_name }}.code-workspace.jinja
(+262 files in other folders)
