[project]
name = "copier-nuxt-python-intranet-app"
version = "0.1.0"
description = "A web app that is hosted within a local intranet. Nuxt frontend, python backend, docker-compose"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    # Managed by upstream template
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "pyright[nodejs]>=1.1.407",
    "copier>=9.11.0",
    "copier-template-extensions>=0.3.3"

    # Specific to this template


]
