[project]
name = "copier-nuxt-python-intranet-app"
version = "0.1.0"
description = "A web app that is hosted within a local intranet. Nuxt frontend, python backend, docker-compose"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    # Specific to this template


    # Managed by upstream template
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.0.1",
    "pyright[nodejs]>=1.1.408",
    "ty>=0.0.30",
    "copier==9.14.3",
    "copier-template-extensions==0.3.3"
]
