# ============== WARNING ==============================================================================
# File is managed by copier template: gh:LabAutomationAndScreening/copier-base-template.git
# See .copier-managed-files.json for details.
#
# You are welcome to make changes to this file in your repo if they are custom to your project,
# but if the change should be shared with other projects, please backport it to the template repo.
# =====================================================================================================
[project]
name = "copier-nuxt-python-intranet-app"
version = "0.1.0"
description = "A web app that is hosted within a local intranet. Nuxt frontend, python backend, docker-compose"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    # Specific to this template


    # Managed by upstream template
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.1.0",
    "faker>=40.23.0",
    "pyright[nodejs]>=1.1.411",
    "pyrefly>=1.1.1",
    "ty",
    "copier==9.15.1",
    "copier-template-extensions==0.3.3"
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
exclude-newer = "1 day"
